--- a/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
+++ b/QuickZip/ClientApp/app/master/downloadmandate/downloadmandate.component.html
@@ -73,7 +73,7 @@
             <div class="col-md-6 col-sm-6 col-xs-12" id="btngroup">
                 <span id="btnp">
                     <input type="button" class="btn btn-success" id="btnreject"
-                           (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value)" value="Reject Mandate" />
+                           (click)="show()" data-toggle="modal" data-target="#myModal" value="Reject Mandate" />
 
                 </span>
                 <span id="btnspa">
@@ -82,7 +82,11 @@
                            value="Download Excel" (click)="download()" />
                 </span>
 
-
+                <!--<span id="btnspa">
+                    <i class="fa fa-download" aria-hidden="true"></i>
+                    <input type="button" class=" btn btn-success" id="btnexcel"
+                           value="Download Scanned Mandate"  />
+                </span>-->
                 <!--<span id="btnspa">
                     <i class="fa fa-download" aria-hidden="true"></i>
                     <input type="button" class=" btn btn-success" id="btnexcel"
@@ -153,66 +157,132 @@
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                     <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
                            (click)="BindGrid(FromDate.value,ToDate.value,Bank.value,RefNo.value)" value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />
+                    <label id="lblName">{{errormsg}}</label>
 
+                    <!--<input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
+                (click)="downloadScannedMandate()" value="Download Scanned Mandate" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />
+            </div>-->
 
-                    <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id=""
-                    (click)="downloadScannedMandate()" value="Download Scanned Mandate" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;" />
-                </div>
+                    <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
 
-                <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
-
+                    </div>
                 </div>
             </div>
+            <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader">
+                <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
+            </div>
+            <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
+                <table id="tbldownmandate">
+                    <thead>
+                        <tr>
+                            <th style="width:150px;"><input type="checkbox" vaule="all" name="all" (click)="toggleSelect($event)">All</th>
+                            <th style="width:150px;">Mandate ID</th>
+                            <th style="width:500px;">Name</th>
+                            <th style="width:150px;">Date On Mandate</th>
+                            <th style="width:150px;">Mandate Printed</th>
+                            <th style="width:150px;">Mandate Scan</th>
+                            <th style="width:150px;">Reference</th>
+                            <th style="width:600px;">Amount</th>
+                            <th style="width:300px;">Account No.</th>
+                            <th style="width:150px;">IFSC/MICR</th>
+                            <th style="width:600px;">Bank Name</th>
+                            <th style="width:150px;">Frequency</th>
+                            <th style="width:150px;">Debit Type</th>
+                            <th style="width:150px;">Debit To</th>
+                            <th style="width:150px;">Created on</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let data of bindgrid">
+                            <td style="width:150px;"><input type="checkbox" value="data.selected" [checked]="data.selected" (change)="onChange($event,data); data.selected = !(data.selected)" id="is3dCheckBox"></td>
+                            <td style="width:150px;">{{data.mandateid}}</td>
+                            <td style="width:500px;">{{data.Customer1}}</td>
+                            <td style="width:150px;">{{data.DateOnMandate}}</td>
+                            <td style="width:150px;">{{data.IsPrint}}</td>
+                            <td style="width:150px;">{{data.IsScan}}</td>
+                            <td style="width:150px;">{{data.Refrence1}}</td>
+                            <td style="width:600px;">{{data.Amount}}</td>
+                            <td style="width:300px;">{{data.AcNo}}</td>
+                            <td style="width:150px;">{{data.Code}}</td>
+                            <td style="width:600px;">{{data.BankName}}</td>
+                            <td style="width:150px;">{{data.Frequency}}</td>
+                            <td style="width:150px;">{{data.DebitType}}</td>
+                            <td style="width:150px;">{{data.ToDebit}}</td>
+                            <td style="width:150px;">{{data.createdon}}</td>
+
+                        </tr>
+                        <tr *ngIf="bindgrid?.length == 0">
+                            <td colspan="3">No Record Found!</td>
+                        </tr>
+
+                    </tbody>
+
+                </table>
+
+            </div>
+
         </div>
-        <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
-            <table id="tbldownmandate">
-                <thead>
-                    <tr>
-                        <th style="width:150px;"><input type="checkbox" vaule="all" name="all" (click)="toggleSelect($event)">All</th>
-                        <th style="width:150px;">Mandate ID</th>
-                        <th style="width:500px;">Name</th>
-                        <th style="width:150px;">Date On Mandate</th>
-                        <th style="width:150px;">Mandate Printed</th>
-                        <th style="width:150px;">Mandate Scan</th>
-                        <th style="width:150px;">Reference</th>
-                        <th style="width:600px;">Amount</th>
-                        <th style="width:300px;">Account No.</th>
-                        <th style="width:150px;">IFSC/MICR</th>
-                        <th style="width:600px;">Bank Name</th>
-                        <th style="width:150px;">Frequency</th>
-                        <th style="width:150px;">Debit Type</th>
-                        <th style="width:150px;">Debit To</th>
-                        <th style="width:150px;">Created on</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr *ngFor="let data of bindgrid">
-                        <td style="width:150px;"><input type="checkbox" value="data.selected" [checked]="data.selected" (change)="onChange($event,data); data.selected = !(data.selected)" id="is3dCheckBox"></td>
-                        <td style="width:150px;">{{data.mandateid}}</td>
-                        <td style="width:500px;">{{data.Customer1}}</td>
-                        <td style="width:150px;">{{data.DateOnMandate}}</td>
-                        <td style="width:150px;">{{data.IsPrint}}</td>
-                        <td style="width:150px;">{{data.IsScan}}</td>
-                        <td style="width:150px;">{{data.Refrence1}}</td>
-                        <td style="width:600px;">{{data.Amount}}</td>
-                        <td style="width:300px;">{{data.AcNo}}</td>
-                        <td style="width:150px;">{{data.Code}}</td>
-                        <td style="width:600px;">{{data.BankName}}</td>
-                        <td style="width:150px;">{{data.Frequency}}</td>
-                        <td style="width:150px;">{{data.DebitType}}</td>
-                        <td style="width:150px;">{{data.ToDebit}}</td>
-                        <td style="width:150px;">{{data.createdon}}</td>
+    </div>
 
-                    </tr>
-                    <tr *ngIf="bindgrid?.length == 0">
-                        <td colspan="3">No Record Found!</td>
-                    </tr>
 
-                </tbody>
+    <div class="container">
+        <!-- Modal -->
+        <div class="modal" id="myModal" role="dialog" [style.display]="showModal ? 'block':'none'">
+            <div class="modal-dialog">
 
-            </table>
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
 
+                        <h5 class="modal-title" style="text-align:center">Are you Sure to Reject Mandate</h5>
+                    </div>
+                    <div class="modal-body">
+                        <div class="row">
+                            <div class="col-sm-3">
+                                <label>Reason</label>
+                            </div>
+                            <div class="col-sm-8">
+                                <textarea class="form-control" id="myform" #RejectedReason placeholder="Enter The Reason"></textarea>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="modal-footer" style="text-align:center">
+
+                        <button type="button" class="btn btn-primary" (click)="RejectMandate(FromDate.value,ToDate.value,Bank.value,RejectedReason.value)">Reject</button> &nbsp;
+                        <button type="button" class="btn btn-default" (click)="hide()" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
         </div>
 
     </div>
-</div>
+
+
+    <div class="modal" id="myModal" [style.display]="showModalSuccess ? 'block' : 'none'">
+        <div class="modal-dialog">
+            <div class="modal-content">
+
+                <!-- Modal Header -->
+                <div class="modal-header">
+                    <h4 class="modal-title">
+                        <img src="../../ClientApp/assets/images/saveSuccessImg.png" />
+                    </h4>
+                    <button type="button" class="close" data-dismiss="modal" (click)="hideSuccess()">&times;</button>
+                </div>
+
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p>MandateId Rejected Successfully</p>
+                </div>
+
+                <!-- Modal footer -->
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-success" data-dismiss="modal" (click)="hideSuccess()">Close</button>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
