--- a/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.html
+++ b/QuickZip/ClientApp/app/master/download-emandate/download-emandate.component.html
@@ -1,6 +1,6 @@
 <div class="main-content" id="maincontent">
     <div class="content">
-        <!--<label id="lblName">{{errormsg}}</label>-->
+
         <div class="col-md-12 col-sm-6 col-xs-4 contnt-wrapper">
             <div class="col-sm-6 col-md-6 col-xs-3 no-padding">
                 <span class="legal">Download E-Mandate</span>
@@ -12,7 +12,7 @@
 
                         <li>
 
-                          
+
 
 
 
@@ -21,23 +21,23 @@
 
                         </li>
                         <!--<li>
-                            <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
-                            <label>
-                                Download Scanned Mandate
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
-                            <label>
-                                Reject Mandate
-                            </label>
-                        </li>
-                        <li>
-                            <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
-                            <label>
-                                Submit
-                            </label>
-                        </li>-->
+                        <i class="fa fa-file-text" aria-hidden="true" title="New"></i>
+                        <label>
+                            Download Scanned Mandate
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-pencil-square-o" aria-hidden="true" title="Edit"></i>
+                        <label>
+                            Reject Mandate
+                        </label>
+                    </li>
+                    <li>
+                        <i class="fa fa-floppy-o" aria-hidden="true" title="Save"></i>
+                        <label>
+                            Submit
+                        </label>
+                    </li>-->
                         <li style="display: none">
                             <i class="fa fa-key" aria-hidden="true" title="Reset Password"></i>
                             <label>
@@ -113,8 +113,8 @@
                 <div class="col-md-4 col-sm-4 col-xs-12  no-padding">
                     <input type="button" class="col-md-2 col-sm-12 col-xs-12 btn btn-success" id="btnOk"
                            value="Search" style="margin-right: 12%; margin-top: 2%; margin-bottom: 2%;float:right;" (click)="SearchFunction(FromDate.value, ToDate.value, Bank.value)" />
-                    
-                    <span id="btnspa">
+                    <label style="color:red">{{errormsg}}</label>
+                    <span id="btnspa" [style.display]="showlabel ? 'block' : 'none'">
                         <i class="fa fa-download" aria-hidden="true"></i>
                         <input type="button" class=" btn btn-success" id="btnexcel"
                                value="Download Excel" (click)="download()" />
@@ -124,11 +124,15 @@
                 </div>
             </div>
         </div>
+        <div class="col-md-12 col-sm-12 col-xs-12 loaderposition" id="divLoarder" *ngIf="Preloader">
+            <img src="../../ClientApp/assets/images/loader.gif" style="margin-left: 45%;margin-top: 19%;" />
+        </div>
+
         <div class="col-md-12 col-sm-12 col-xs-12" id="tbldiv">
             <table id="tblEmandate">
                 <thead>
                     <tr>
-                        <th style="width:150px;"><input type="checkbox" name="all" value="all" (click)="toggleSelect($event)">All</th>  <!--(change)="Removelabel()"-->
+                        <th style="width:150px;"><input type="checkbox" name="all" value="all" (click)="toggleSelect($event)" (change)="Removelabel()">All</th>
                         <th style="width:150px;">Debtor Name</th>
                         <th style="width:220px;">Instructed Agent Member Name</th>
                         <th style="width:220px;">Consumer Reference Number</th>
@@ -145,7 +149,7 @@
                 </thead>
                 <tbody>
                     <tr *ngFor="let lang of Databind">
-                        <td style="width:150px;"><input type="checkbox" name="all" value="lang.selected" [checked]="lang.selected" (change)="onChange($event,lang); lang.selected = !(lang.selected)"></td>  <!--(click)="Removelabel()"-->
+                        <td style="width:150px;"><input type="checkbox" name="all" value="lang.selected" [checked]="lang.selected" (change)="onChange($event,lang); lang.selected = !(lang.selected)" (click)="Removelabel()"></td>
                         <td style="width:150px;"> {{lang.DebtorName}}</td>
                         <td style="width:220px;">{{lang.InstructedAgentMemberName}}</td>
                         <td style="width:220px;">{{lang.ConsumerReferenceNumber}}</td>
